# ABDJUNiO601

./: .gitignore  CMakeLists.txt  CONTROL_FILESCODE202601082023.txt  PENDING_TASKS.md  README.md  TOTALCODE202601082023.txt  WebViewEditor_old.cpp  WebViewEditor_real_utf8.cpp  analyze_hex.py  analyze_sysex.py  analyze_syx.py  best_of_orion.json  best_of_orion.syx  build_auto.bat  build_final.txt  build_juno.bat  build_linux.sh  build_log.txt  build_mac.sh  build_native_ui.bat  build_rpi.sh  build_standalone.bat  convert_hex.py  convert_presets_to_json.py  debug_compile.bat  extract_errors.py  extract_names.py  extract_names_v2.py  factory_presets.json  factory_presets.syx  find_a11_in_json.py  find_errors.py  generate_factory_header.py  generate_factory_presets.py  generate_final_header.py  generate_final_header_v2.py  generate_final_header_v3.py  generate_final_header_v4.py  generate_leds.py  jarvik7_favorites.json  (+21 more)
CMake/: CMake.registration.json  Microsoft.VisualStudio.CMake.Package.pkgdef
CMake/3082/: openfolderschema.json
CMake/IntelliSense/: commands.json  modules.json  packages.json  variables.json
JUNO106/: prueba.json
JUNO106/mozaic/: CC-To-JUNO.mozaic
JUNO106/original/: JUNO-106 CONNECTION.html
JUNO106/original/juno edit/: JunoEdit.txt  index.html  juno106.zoo  juno2lib.lzh  junoedit.readme.txt  junolib2.txt  mks50.zoo  mks_50.lzh
JUNO106/original/juno edit/junolib2/: dave.pat  junolibr.doc  junolibr.hlp  msgblast.vbx
JUNO106/original/juno edit/junoptch/: BASS1.JNO  BASS11.JNO  BASS16.JNO  BASS4.JNO  BASS7.JNO  BASS8.JNO  BELL1.JNO  BELL4.JNO  BELLLIKE.JNO  FLUTE1.JNO  HARPSICH.JNO  ORGAN2.JNO  PAD14.JNO  PERC3.JNO  SPACE1.JNO  SPACE2.JNO  STRING5.JNO  SYNTH11.JNO  SYNTH13.JNO  SYNTH21.JNO  SYNTH27.JNO  SYNTH32.JNO  SYNTH6.JNO  SYNTH9.JNO  VIBISH.JNO  VIOLIN.JNO
JUNO106/original/junolib/junolib/: Bass10.jno  Bass12.jno  Calliope.jno  Japan1.jno  Juneb.jno  Junolib.doc  Organ1.jno  Pad7.jno  Perc2.jno  Sbass3.jno  Sbass4.jno  Sbell1.jno  Sfatbass.jno  Shorn3.jno  Snoise1.jno  Sorgan2.jno  Spad1.jno  Ssqueek1.jno  Sstring1.jno  Sstring2.jno  Ssynth2.jno  Ssynth3.jno  Strings3.jno  Synth12.jno  Synth14.jno  Synth16.jno  Synth18.jno  Synth19.jno  Synth20.jno  Synth29.jno  Synthorn.jno  Thunder.jno  Wind.jno
JUNO106/original/junolib/junolib (1)/: Bass17.jno  Bass6.jno  Bass9.jno  Bell2.jno  Juno.doc  Org3.jno  Pad1.jno  Pad13.jno  Pad3.jno  Pad6.jno  Pad8.jno  Perc1.jno  Sbass1.jno  Sbass5.jno  Sbass6.jno  Sbass9.jno  Sbell2.jno  Sclarine.jno  Sdeepfat.jno  Sfatstr.jno  Shorn2.jno  Shorn4.jno  Snoise3.jno  Sorgan.jno  Sother1.jno  Sother2.jno  Sspace1.jno  Ssqueek2.jno  Sstring5.jno  Sstring9.jno  Sstringg.jno  Ssynth4.jno  Ssynth6.jno  Synth15.jno  Synth2.jno  Synth22.jno  Synth25.jno  Synth26.jno  Synth31.jno
JUNO106/original/sounds/banco a/: Roland Juno-106 preset a playlist.m3u
JUNO106/original/sounds/banco b/: Roland Juno-106 preset b playlist.m3u
JUNO106/original/sysex/: BestofOrion.106  j106test.txt
JUNO106/patches/best_of_orion/: Best of Orion.106
JUNO106/patches/factory_patches/: factory patches (with position).106  factory patches.106
JUNO106/patches/jarvik7_favorites_I/: jarvik7 favorites I.106
Juno_Audit/: AUDIT_SUMMARY.txt  README_AUDIT.md  critical_fixes.cpp  sysex_reverse_engineering.md
Source/ABD-SynthEngine/Core/Envelopes/: ADSRGeneric.h
Source/ABD-SynthEngine/Core/LFO/: LFOGeneric.h
Source/ABD-SynthEngine/Core/Voices/: VoiceAllocator.h  (+1 more)
Source/Core/: ABDSimpleJuno106AudioProcessor.h  BuildVersion.h  CalibrationManager.cpp  CalibrationManager.h  CalibrationParam.h  CalibrationSettings.cpp  CalibrationSettings.h  EngineConfig.h  FactoryPresets.h  Instrument.h  JunoBBD.h  JunoConstants.h  JunoLogger.h  JunoSysEx.h  JunoSysExEngine.cpp  JunoSysExEngine.h  JunoTapeDecoder.h  JunoTapeEncoder.h  JunoUnitTests.cpp  JunoVoiceManager.cpp  JunoVoiceManager.h  MidiLearnHandler.h  ParameterManager.h  PerformanceState.cpp  PerformanceState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  ServiceModeManager.cpp  ServiceModeManager.h  SynthParams.h  TestPrograms.h  TuningManager.h
Source/Synth/: ChorusBBD.cpp  ChorusBBD.h  JunoADSR.cpp  JunoADSR.h  JunoDCO.cpp  JunoDCO.h  JunoLFO.cpp  JunoLFO.h  JunoVCF.cpp  JunoVCF.h  JunoVoice.cpp  JunoVoice.h  Voice.cpp  Voice.h
Source/UI/: DesignTokens.h  JunoBender.cpp  JunoBender.h  JunoUIHelpers.h  ParameterDisplay.h  PresetBrowser.cpp  PresetBrowser.h  ScaledComponent.h  SkinManager.h
Source/UI/Components/: JunoButton.h  JunoKnob.h  JunoLCD.h  SevenSegmentDisplay.h
Source/UI/Sections/: JunoBankSection.cpp  JunoBankSection.h  JunoChorusSection.h  JunoControlSection.cpp  JunoControlSection.h  JunoDCOSection.h  JunoENVSection.h  JunoHPFSection.h  JunoLFOSection.h  JunoPerformanceSection.h  JunoSidePanel.cpp  JunoSidePanel.h  JunoSysExDisplay.cpp  JunoSysExDisplay.h  JunoVCASection.h  JunoVCFSection.h
Source/UI/WebUI/: index.html  script.js  service.css  service.js  style.css
Source/UI/WebView/: OmegaUiBridge.cpp  OmegaUiBridge.h  WebViewEditor.cpp  WebViewEditor.h
WebUI/: index.html  script.js
bundle_code/: CONTROL_FILESCODE202601121150.txt  CONTROL_FILESCODE202601121528.txt  CONTROL_FILESCODE202601130022.txt  CONTROL_FILESCODE202601130157.txt  CONTROL_FILESCODE202601130719.txt  CONTROL_FILESCODE202601131732.txt  CONTROL_FILESCODE202603191405.txt  TOTALCODE202601090025.txt  TOTALCODE202601090027.txt  TOTALCODE202601121150.txt  TOTALCODE202601121244.txt  TOTALCODE202601121524.txt  TOTALCODE202601121528.txt  TOTALCODE202601130016.txt  TOTALCODE202601130022.txt  TOTALCODE202601130719--.txt  TOTALCODE202601130740.txt  TOTALCODE202601130915.txt  TOTALCODE202601131000.txt  TOTALCODE202601131052.txt  TOTALCODE202601131219.txt  TOTALCODE202601131347.txt  TOTALCODE202601131526---.txt  TOTALCODE202601131732---.txt  TOTALCODE202603191219.txt  TOTALCODE202603191405.txt
exports/: CONTROL_FILESCODE_202603201326.txt  project_bundle_202603201326.jsonl  project_metadata_202603201326.json
scripts/: bundle_code_jsonl.ps1  release.sh
(+77 files in other folders)
